--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,4 +5,6 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-    - "8080:80"
+    - "6162:80"
+    volumes:
+      - ./html:/usr/share/nginx/html
